--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,12 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-email</artifactId>
+            <version>1.4</version>
+        </dependency>
+
         <!--commons-io  -->
         <dependency>
             <groupId>commons-io</groupId>
