--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 #DataBase start
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/jesper?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/jesper?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #DataBase end
 
-druid.url=jdbc:mysql://127.0.0.1:3306/jesper?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+druid.url=jdbc:mysql://localhost:3306/jesper?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
 druid.username=root
-druid.password=12345678
+druid.password=root
 driver-class-name=com.mysql.jdbc.Driver
 
 
@@ -15,7 +15,7 @@ driver-class-name=com.mysql.jdbc.Driver
 spring.data.mongodb.uri=mongodb://localhost:27017/springboot-db
 
 #mybatis start
-mybatis.config-location=classpath:/mybatis-config.xml
+#mybatis.config-location=classpath:/mybatis-config.xml
 #mybatis end
 
 
@@ -25,7 +25,7 @@ spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.content-type=text/html
 #开发时关闭缓存,不然没法看到实时页面
-spring.thymeleaf.cache=false
+spring.thymeleaf.cache=true
 spring.thymeleaf.suffix=.html
 #thymeleaf end
 
@@ -37,10 +37,10 @@ spring.http.multipart.maxRequestSize=100Mb
 ##集成mybatis
 mybatis.mapper-locations=classpath:/mapper/*Mapper.xml
 
-spring.mail.host=smtp.exmail.qq.com
-spring.mail.username=test@qq.com
-spring.mail.password=test
-spring.mail.from=test@qq.com
+spring.mail.host=smtp.qq.com
+spring.mail.prot=465
+spring.mail.username=userfly@qq.com
+spring.mail.code=uzycxljwobgcbaji
 
 #redis
 redis.host=127.0.0.1
