--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,19 @@
+server.port=8084
 #DataBase start
 spring.datasource.url=jdbc:mysql://localhost:3306/jesper?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #DataBase end
-
 druid.url=jdbc:mysql://localhost:3306/jesper?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
 druid.username=root
 druid.password=root
 driver-class-name=com.mysql.jdbc.Driver
-
-
 # mongodb start
 spring.data.mongodb.uri=mongodb://localhost:27017/springboot-db
-
 #mybatis start
 #mybatis.config-location=classpath:/mybatis-config.xml
 #mybatis end
-
-
 #thymeleaf start
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.mode=HTML5
@@ -28,20 +23,16 @@ spring.thymeleaf.content-type=text/html
 spring.thymeleaf.cache=true
 spring.thymeleaf.suffix=.html
 #thymeleaf end
-
 #uploadFileSize start
 spring.http.multipart.maxFileSize=10Mb
 spring.http.multipart.maxRequestSize=100Mb
 #uploadFileSize end
-
 ##集成mybatis
 mybatis.mapper-locations=classpath:/mapper/*Mapper.xml
-
 spring.mail.host=smtp.qq.com
 spring.mail.prot=465
 spring.mail.username=userfly@qq.com
 spring.mail.code=uzycxljwobgcbaji
-
 #redis
 redis.host=127.0.0.1
 redis.port=6379
@@ -49,31 +40,23 @@ redis.timeout=10
 redis.poolMaxTotal=1000
 redis.poolMaxIdle=500
 redis.poolMaxWait=500
-
-
 #============== kafka ===================
 # 指定kafka 代理地址，可以多个
 spring.kafka.bootstrap-servers=localhost:9092
-
 #=============== provider  =======================
-
 spring.kafka.producer.retries=0
 # 每次批量发送消息的数量
 spring.kafka.producer.batch-size=16384
 spring.kafka.producer.buffer-memory=33554432
-
 # 指定消息key和消息体的编解码方式
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
-
 #=============== consumer  =======================
 # 指定默认消费者group id
 spring.kafka.consumer.group-id=test-consumer-group
-
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.enable-auto-commit=true
 spring.kafka.consumer.auto-commit-interval=100
-
 # 指定消息key和消息体的编解码方式
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
